# EuRoC_dataset_converter

./: LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: default.yaml  default_depth_estimation.yaml
src/euroc_converter/: convert.py  download.py  run.py
src/euroc_converter/datasets/: EuRoC.py  __init__.py  base.py
src/euroc_converter/depth_generation/: ess_generator.py  generator.py  opencv_generator.py
src/euroc_converter/depth_generation/opencv_stero_depth/: opencv_stereo_estimation.py
